--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "@types/node": "^12.12.68",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-typist": "^2.0.1",
     "gh-pages": "^3.1.0",
+    "install": "^0.13.0",
     "node-sass": "^4.14.1",
+    "npm": "^6.14.8",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "3.4.3",
+    "react-typist": "^2.0.5",
     "typescript": "^3.7.5"
   },
   "scripts": {
